Fix contact info widget icon spacing.

--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -154,8 +154,7 @@
             li:nth-child(3) {
                 float: left;
                 width: 285px;
-                padding-left: 10px;
-                padding-top: 10px;
+                padding: 10px 10px 0 10px;
                 & img {
                     height: 260px;
                     object-fit: cover;
