--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -753,6 +753,7 @@ a {
   width: 27%;
   /* Search widget */
   /* Business Hours widget */
+  /* Inhabitent Contact Info widget */
   /* Archive widget */ }
   .widget-area .widget_search {
     display: none; }
@@ -764,6 +765,19 @@ a {
       max-width: 100%; }
   .widget-area .business-hours-widget-class .business-hours-day {
     font-weight: bold; }
+  .widget-area .inhabitent-contact-info-class .contact-phone,
+  .widget-area .inhabitent-contact-info-class .contact-email,
+  .widget-area .inhabitent-contact-info-class .contact-address {
+    display: -ms-flexbox;
+    display: flex; }
+  .widget-area .inhabitent-contact-info-class div.contact-email {
+    margin: 1rem 0; }
+  .widget-area .inhabitent-contact-info-class .contact-address p:first-child {
+    margin: 0; }
+  .widget-area .inhabitent-contact-info-class .contact-address p:last-child {
+    margin-top: 0; }
+  .widget-area .inhabitent-contact-info-class .contact-info-icon {
+    width: 30px; }
   .widget-area .widget_archive ul {
     margin: 0;
     padding: 0; }
@@ -1033,8 +1047,7 @@ object {
     .page-template-front-page .adventures-links ul li:nth-child(3) {
       float: left;
       width: 285px;
-      padding-left: 10px;
-      padding-top: 10px; }
+      padding: 10px 10px 0 10px; }
       .page-template-front-page .adventures-links ul li:nth-child(3) img {
         height: 260px;
         object-fit: cover;
